--- a/style.css
+++ b/style.css
@@ -622,6 +622,7 @@ nav{
         margin-left: -22px;
         margin-top: 12px;
         margin-bottom: 20px;
+        font-family: 'Courier New', Courier, monospace;
     }
     #page1>p{
         font-size: 3.5vw;
