--- a/style.css
+++ b/style.css
@@ -633,9 +633,9 @@ nav{
         margin-top:-25px;
     }
     #btn1{
-        padding: 12px 14px;
+        padding: 10px 12px;
         font-size: 16px;
-        margin-left:20px;
+        margin-left:20%;
     }
     .sidenav{
         width: 100%;
