--- a/style.css
+++ b/style.css
@@ -626,13 +626,13 @@ nav{
     }
     #page2{
         width: 100%;
+        margin-top:12px;
     }
     #page2 >img{
         width: 100%;
-        margin-bottom: 2vw;
     }
     #btn1{
-        padding: 6px 10px;
+        padding: 8px 10px;
         font-size: 14px;
     }
     .sidenav{
