--- a/style.css
+++ b/style.css
@@ -612,6 +612,7 @@ nav{
     }
     #page1{
         width: 100%;
+        margin-bottom:12px;
     }
     #page1 h1{
         font-size: 10.1vw;
@@ -626,13 +627,12 @@ nav{
     }
     #page2{
         width: 100%;
-        margin-top:12px;
     }
     #page2 >img{
         width: 100%;
     }
     #btn1{
-        padding: 10px 10px;
+        padding: 12px 10px;
         font-size: 14px;
     }
     .sidenav{
