--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ nav{
     border:none;
     border-radius: 30px;
     cursor: pointer;
+    font-family: 'Courier New', Courier, monospace;
     transition: all 0.6s ease-in-out;
     &:hover{
         box-shadow: 2px 5px 5px rgb(16, 14, 14);
@@ -72,6 +73,7 @@ nav{
     right: 0;
     height: 100vh;
     width: 280px;
+    font-family: 'Courier New', Courier, monospace;
     z-index: 999;
     backdrop-filter: blur (10px);
     background-color: rgba(0, 0, 0, 0.698);
@@ -124,6 +126,7 @@ nav{
     cursor: pointer;
     transition: all 0.6s ease-in-out;
     margin-bottom: 1vw;
+    font-family: 'Courier New', Courier, monospace;
     &:hover{
     background-color: aliceblue;  
     color: green;
@@ -374,7 +377,7 @@ nav{
     padding: 9px 16px;
     border-radius: 18px;
     cursor: pointer;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     transition: all 1s ease-in-out;
     border: 1.7px solid rgba(0,0,0,0.85);
     font-size: 15px;
@@ -388,7 +391,7 @@ nav{
     padding: 9px 16px;
     border-radius: 16px;
     cursor: pointer;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    font-family: 'Courier New', Courier, monospace;
     transition: all 1s ease-in-out;
     border: 1.7px solid rgba(0,0,0,0.85);
     font-size: 15px;
@@ -402,7 +405,7 @@ nav{
     padding: 9px 16px;
     border-radius: 16px;
     cursor: pointer;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    font-family: 'Courier New', Courier, monospace;
     border: 1.7px solid rgba(0,0,0,0.85);
     font-size: 15px;
     transition: all 1s ease-in-out;
@@ -417,7 +420,7 @@ nav{
     border-radius: 16px;
     border: none;
     cursor: pointer;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    font-family: 'Courier New', Courier, monospace;
     border: 1.7px solid rgba(0,0,0,0.85);
     font-size: 15px;
     transition: all 1s ease-in-out;
@@ -432,7 +435,7 @@ nav{
     border-radius: 16px;
     border: none;
     cursor: pointer;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    font-family: 'Courier New', Courier, monospace;
     border: 1.7px solid rgba(0,0,0,0.85);
     font-size: 15px;
     transition: all 1s ease-in-out;
@@ -447,7 +450,7 @@ nav{
     border-radius: 16px;
     border: none;
     cursor: pointer;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    font-family: 'Courier New', Courier, monospace;
     border: 1.7px solid rgba(0,0,0,0.85);
     font-size: 15px;
     transition: all 1s ease-in-out;
@@ -462,7 +465,7 @@ nav{
     border-radius: 16px;
     border: none;
     cursor: pointer;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    font-family: 'Courier New', Courier, monospace;
     border: 1.7px solid rgba(0,0,0,0.85);
     transition: all 1s ease-in-out;
     font-size: 15px;
@@ -477,7 +480,7 @@ nav{
     border-radius: 16px;
     border: none;
     cursor: pointer;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    font-family: 'Courier New', Courier, monospace;
     border: 1.7px solid rgba(0,0,0,0.85);
     transition: all 1s ease-in-out;
     font-size: 16px;
@@ -492,7 +495,7 @@ nav{
     border-radius: 16px;
     border: none;
     cursor: pointer;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    font-family: 'Courier New', Courier, monospace;
     border: 1.7px solid rgba(0,0,0,0.85);
     transition: all 1s ease-in-out;
     font-size: 16px;
